# wasm-in-c

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
host/wasmer/: CMakeLists.txt  main_wasmer.cpp
host/wasmtime/: CMakeLists.txt  main_wasmtime.cpp
plugins/c/: plugin.c  plugin.wasm
plugins/zig/: plugin.wasm  plugin.zig
